--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+
 * {
 	margin: 0;
 	padding: 0;
@@ -7,6 +8,17 @@
   :root {
 	--index: calc(1vw + 1vh);
 	--transition: 1.5s cubic-bezier(.05, .5, 0, 1);
+  }
+  
+  @font-face {
+	font-family: kamerik-3d;
+	src: url(../fonts/kamerik205-heavy.woff2);
+	font-weight: 900;
+  }
+  
+  @font-face {
+	font-family: merriweather-italic-3d;
+	src: url(../fonts/merriweather-regular-italic.woff2);
   }
   
   body {
@@ -21,7 +33,7 @@
 	height: var(--logo-size);
 	background-repeat: no-repeat;
 	position: absolute;
-	left: calc(50% - calc(var(--logo-size) / 2));
+	left: calc(51% - calc(var(--logo-size) / 2));
 	top: calc(var(--index) * 2.8);
 	z-index: 1;
   }
@@ -51,28 +63,34 @@
   }
   
   .layer-1 {
+	pointer-events: none;
 	transform: translateZ(-55px) scale(1.06);
+	
+  }
+  
+  .layer-2 {
+	transform: translateZ(80px) scale(.88);
+	
   }
   
   .layer-3 {
 	transform: translateZ(180px) scale(.8);
+	
   }
   
   .layer-4 {
 	transform: translateZ(190px) scale(.9);
+	
+  }
+  
+  .layer-5 {
+	transform: translateZ(300px) scale(.9);
+	
   }
   
   .layer-6 {
 	transform: translateZ(380px);
-  }
-  
-  .canvas-container {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	pointer-events: none;
+	
   }
   
   .hero-content {
@@ -111,65 +129,21 @@
 	cursor: pointer;
 	margin-top: calc(var(--index) * 2.5);
   }
-
-  #leafContainer {
-	position: absolute;
+  
+  .layer-4,
+  .layer-5,
+  .layer-6 {
+	pointer-events: none;
+  }
+  
+  .modelContainer {
 	width: 100%;
 	height: 100vh;
-	overflow: hidden;
   }
   
-  #leafContainer > div {
-	position: absolute;
-	width: 100px;
-	height: 100px;
-	bottom: -100px;
-	z-index: -1;
-	/* Анимация появления и исчезновения листьев */
-	animation: fade 5s infinite linear, drop 1s infinite ease-in;
-  }
-  
-  #leafContainer > div {
-	position: absolute;
-	width: 100px;
-	height: 100px;
-	bottom: -100px;
-	z-index: -1;
-	/* Анимация падения и ветра */
-	animation: drop 10s infinite linear;
-	transform-origin: bottom center;
-  }
-  
-  @keyframes fade {
-	0% {
-	  opacity: 1;
-	}
-	95% {
-	  opacity: 1;
-	}
-	100% {
-	  opacity: 0;
-	}
-  }
-  
-  @keyframes drop {
-	0% {
-	  transform: translateY(-50vh) rotate(-5deg);
-	}
-	50% {
-	  transform: translateY(50vh) rotate(5deg);
-	}
-	100% {
-	  transform: translateY(100vh) rotate(-5deg);
-	}
-  }
-  
-  
-  @keyframes clockwiseSpin {
-	0% {
-	  transform: rotate(-50deg);
-	}
-	100% {
-	  transform: rotate(50deg);
-	}
+  .rain-container {
+	transform: translateZ(190px) scale(.9);
+	position: relative;
+	width: 100%;
+	height: 100vh;
   }
